# yolo_people_obstacles

yolo_people_obstacles/: package.xml  setup.cfg  setup.py
yolo_people_obstacles/config/: nav2_params.yaml
yolo_people_obstacles/launch/: tb3_people_nav2.launch.py
yolo_people_obstacles/resource/: yolo_people_obstacles
yolo_people_obstacles/yolo_people_obstacles/: yolo_people_to_cloud_node.py
